<resources>
    <string name="app">智能插座</string>

    <string name="guide">立即体验</string>

    <string name="tip_add_hub">添加一个「插座」吧~</string>

    <string name="msg_loading">请稍等…</string>

    <string name="user_register">注 册</string>
    <string name="user_login">登 录</string>
    <string name="user_register_success">注册成功</string>
    <string name="user_login_success">登录成功</string>
    <string name="all_update">修 改</string>
    <string name="all_cancel">取 消</string>
    <string name="all_ensure">确 定</string>

    <string name="user_detail_info">用户信息</string>
    <string name="user_detail_name">用户名</string>
    <string name="user_detail_phone">手机号</string>
    <string name="user_detail_logout">登出</string>
    <string name="user_detail_new_avatar">修改头像</string>
    <string name="user_detail_new_password">修改密码</string>
    <string name="user_detail_new_info">修改用户信息</string>
    <string name="all_different_password">两次密码不一致</string>

    <string name="user_hint_input_new_password">新密码</string>
    <string name="user_hint_input_password">请输入密码</string>
    <string name="user_hint_input_password_again">请再次输入密码</string>
    <string name="user_hint_input_username">请输入用户名</string>
    <string name="user_hint_input_phone">请输入手机号</string>
    <string name="msg_phone_error">请输入手机号</string>

    <string name="main_drawer_open">open</string>
    <string name="main_drawer_close">close</string>

    <string name="permission_denied">权限已拒绝</string>
    <string name="permission_denied_never_ask">权限已拒绝，使用过程若出现问题，请前往「设置」打开APP的权限</string>
    <string name="permission_why">请求权限</string>
    <string name="permission_camera">扫描需要相机权限</string>
    <string name="permission_storage">APP运行过程中需要缓存部分信息在本地，需要读写存储卡两个权限</string>

    <string name="nav_hub">插座列表</string>
    <string name="nav_user">用户中心</string>
    <string name="nav_about">关于应用</string>
    <string name="nav_other">其他</string>
    <string name="nav_day_night">切换日夜间</string>
    <string name="nav_clear">清除缓存</string>

    <string name="all_exit_app">再按一次退出程序</string>
    <string name="all_edit">编辑</string>
    <string name="all_add">添加</string>
    <string name="all_delete">删除</string>
    <string name="all_zero">0</string>
    <string name="all_max_name">名字超过最大长度</string>

    <string name="hub_hint_name">插座名字</string>
    <string name="hub_is_connected">在线</string>
    <string name="hub_not_connected">离线</string>
    <string name="hub_msg_not_connected">插座已离线</string>
    <string name="hub_is_electric">已通电</string>
    <string name="hub_not_electric">已断电</string>

    <string name="hub_add">添加插座</string>
    <string name="hub_add_msg">确定添加插座吗？</string>
    <string name="hub_delete">删除插座</string>
    <string name="msg_hub_delete">确定删除插座吗？</string>
    <string name="msg_hub_reset">确定清除存储的所有用电器特征值吗？</string>

    <string name="find_device">正在查询当前用电器…</string>
    <string name="none_device">空载</string>
    <string name="is_validate">有效</string>
    <string name="not_validate">无效</string>
    <string name="hub_hint_input_device">请输入用电器名</string>
    <string name="hub_detail_store_device">存储</string>
    <string name="hub_detail_store_tip">存储值：</string>
    <string name="hub_detail_match_device">匹配</string>
    <string name="hub_detail_match_tip">匹配值：</string>
    <string name="hub_detail_add_device">添加当前用电器</string>
    <string name="hub_detail_update_device">更新当前用电器</string>
    <string name="hub_detail_update_device_img">更新当前用电器图片</string>
    <string name="hub_detail_reset_hub">清除存储的所有用电器特征值</string>
    <string name="msg_do_when_no_electric">继电器已断电，请通电后再设置</string>
    <string name="msg_can_not_load_when_no_electric">继电器已断电，无法查询当前用电器</string>
    <string name="msg_do_when_none">空载，请插上用电器后再设置</string>
    <string name="msg_add_when_none">无法确认当前用电器，请先手动添加</string>
    <string name="msg_update_when_error">如果当前电器有误，请更新信息</string>

    <string name="hub_detail_real_time_info">实时信息</string>
    <string name="hub_detail_energy_used">日用电量</string>
    <string name="hub_detail_timer">定时</string>
    <string name="hub_detail_timer_setting">定时设置</string>
    <string name="timer_hint_name">请输入定时器名字</string>

    <string name="qr_smart_hub">扫描智能插座</string>
    <string name="qr_code_scan">二维码/条形码扫描</string>

    <string name="hub_detail_now_voltage">电压(V)</string>
    <string name="hub_detail_now_ampere">电流(A)</string>
    <string name="hub_detail_now_power_factor">功率因数</string>
    <string name="hub_detail_now_power">功率(W)</string>
    <string name="hub_detail_now_current_electrical_appliances">当前电器</string>
    <string name="none">无</string>

    <string name="hub_detail_spare_electrical_bill">电费(元)</string>
    <string name="hub_detail_spare_electrical_degree">电度(KWh)</string>

    <string name="about_app_function">功能介绍</string>
    <string name="about_app_function_introduction">
        1.遵循 Material Design 风格\n
        2.兼容 6.0 ＜= x ＜ 7.0 及各种分辨率\n
        3.支持扫码添加插座\n
        4.支持对插座的状态、日用电量查看、设置定时开关\n
        5.多时间段用电量\n
        5.支持日夜间模式\n
        6.目前基本功能已完成\n
    </string>
    <string name="about_source_code">源码</string>
    <string name="about_source_code_url">https://github.com/Zoctan/SmartHub.git</string>
    <string name="about_author">APP作者</string>
    <string name="about_github">Github:</string>
    <string name="about_github_url">https://github.com/Zoctan</string>
    <string name="about_email">邮箱:</string>
    <string name="about_email_url">752481828@qq.com</string>
    <string name="about_library">用到的开源库</string>
    <string name="about_library_introduction">
        gson\n
        okhttp3\n
        glide\n
        circleimageview\n
        MPAndroidChart\n
        qiniu-android-sdk\n
        android-async-http\n
        happy-dns\n
        zxing\n
        butterknife\n
        permissionsdispatcher-processor\n
        SwipeDelMenuLayout\n
        SmartRefreshLayout\n
        android-gif-drawable\n
        nice-spinner\n
        utilcode\n
        barlibrary\n
        FlycoRoundView_Lib\n
        alerter\n
        fab-speed-dial\n
        NiftyDialogEffects\n
        IconHandler\n
    </string>
</resources>
