<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_hub_list"
            android:icon="@drawable/ic_hub_list"
            android:title="@string/nav_hub" />
        <item
            android:id="@+id/item_user_center"
            android:icon="@drawable/ic_user_center"
            android:title="@string/nav_user" />

        <item
            android:id="@+id/item_about_app"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/item_switch_day_or_night"
                android:icon="@drawable/ic_day_night"
                android:title="@string/nav_day_night" />
            <item
                android:id="@+id/item_clear_cache"
                android:icon="@drawable/ic_clear"
                android:title="@string/nav_clear" />
        </menu>
    </item>

</menu>
