<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout_hub_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.HubDetailActivity">

    <com.zoctan.smarthub.ui.custom.TitleBar
        android:id="@+id/TitleBar_hub_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary" />

    <android.support.v4.view.ViewPager
        android:id="@+id/ViewPager_hub_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="6" />

    <eu.long1.spacetablayout.SpaceTabLayout
        android:id="@+id/SpaceTabLayout_hub_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:button_color="@color/accent"
        app:icon_one="@drawable/ic_spare"
        app:icon_three="@drawable/ic_timer"
        app:icon_two="@drawable/ic_now"
        app:number_of_tabs="three"
        app:starting_position="two"
        app:tab_color="@color/primary"
        app:text_color="@color/white"
        app:text_one="@string/hub_detail_energy_used"
        app:text_three="@string/hub_detail_timer"
        app:text_two="@string/hub_detail_real_time_info" />
</LinearLayout>