<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@color/third_text"
            app:expandedTitleMarginStart="10dp"
            app:expandedTitleTextAppearance="@color/secondary_text"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ImageView_about_app"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/app"
                    android:textColor="@color/third_text" />

                <TextView
                    android:id="@+id/TextView_about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/all_zero"
                    android:textColor="@color/third_text" />
            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/about_app_function"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingStart="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/about_app_function_introduction"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/about_source_code"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingBottom="10dp"
                        android:paddingEnd="0dp"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/about_source_code_url"
                        android:textColor="@color/secondary_text"
                        android:textColorLink="@color/primary"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/about_author"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingEnd="0dp"
                            android:paddingStart="20dp"
                            android:paddingTop="10dp"
                            android:text="@string/about_blog"
                            android:textColor="@color/secondary_text"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:paddingBottom="10dp"
                            android:paddingEnd="0dp"
                            android:paddingStart="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/about_blog_url"
                            android:textColor="@color/secondary_text"
                            android:textColorLink="@color/primary"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingEnd="0dp"
                            android:paddingStart="20dp"
                            android:paddingTop="5dp"
                            android:text="@string/about_github"
                            android:textColor="@color/secondary_text"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:paddingBottom="10dp"
                            android:paddingEnd="0dp"
                            android:paddingStart="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/about_github_url"
                            android:textColor="@color/secondary_text"
                            android:textColorLink="@color/primary"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingEnd="0dp"
                            android:paddingStart="20dp"
                            android:paddingTop="5dp"
                            android:text="@string/about_email"
                            android:textColor="@color/secondary_text"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="email"
                            android:paddingBottom="10dp"
                            android:paddingEnd="0dp"
                            android:paddingStart="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/about_email_url"
                            android:textColor="@color/secondary_text"
                            android:textColorLink="@color/primary"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/about_library"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingEnd="0dp"
                        android:paddingStart="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/about_library_introduction"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>